--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "postcss": "8.4.27",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-swipeable": "^7.0.1",
     "tailwindcss": "3.3.3",
     "ts-jest": "^29.1.1",
     "typescript": "5.1.6"
