--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "frontend_test-sajib_hawee",
+  "name": "simmple-product-page",
   "version": "0.1.0",
   "private": true,
   "scripts": {
